Refactor diamond-button styles for improved text visibility

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
 .diamond-button {
   background: linear-gradient(45deg, #6a11cb, #2575fc);
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
+  color: transparent;
   font-size: 1.5rem;
   font-weight: bold;
   padding: 8px 0;
